<resources>
    <string name="app_name">PopularMovies</string>
    <string name="error_message">Sorry, there was an error.</string>
    <string name="detail_title">Title:</string>
    <string name="detail_date">Release date:</string>
    <string name="detail_vote">Average votes:</string>
    <string name="detail_plot">Synopsis:</string>
    <string name="plot_placeholder">In the near future, a weary Logan (Hugh Jackman) cares for an ailing Professor X (Patrick Stewart) at a remote outpost on the Mexican border. His plan to hide from the outside world gets upended when he meets a young mutant (Dafne Keen) who is very much like him. Logan must now protect the girl and battle the dark forces that want to capture her.</string>
    <string name="detail_trailer_label">trailer</string>
    <string name="detail_reviews_label">Reviews:</string>

    <!--detail view-->
    <string name="add_fav">Favorite</string>
    <string name="remove_fav">Remove Favorite</string>
    <string name="error_add_fav">Sorry this can not be added in favorites</string>
    <string name="insert_movie_failed">adding to favorite failed</string>
    <string name="insert_movie_success">successfully added to your favorites</string>
    <string name="remove_fav_failed">Could not remove from favorites.</string>

    <!--tools-->
    <string name="tool_title">Chappie</string>
</resources>
