<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.android.popularmovies.MovieDetail">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_detail_movie_poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>


        <!--title   -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                style="@style/detail_headers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/detail_title" />

            <TextView
                android:id="@+id/tv_detail_movie_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="right"
                tools:text="Logan" />

        </LinearLayout>

        <!--trailer   -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                style="@style/detail_headers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:layout_marginTop="13dp"
                android:text="@string/detail_trailer_label" />

            <ImageButton
                android:id="@+id/play_trailer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:src="@drawable/ic_play_arrow_black_24dp"/>

        </LinearLayout>

        <!--votes-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                style="@style/detail_headers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/detail_vote" />

            <TextView
                android:id="@+id/tv_detail_votes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="right"
                tools:text="5" />

        </LinearLayout>

        <!--release date-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                style="@style/detail_headers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/detail_date" />

            <TextView
                android:id="@+id/tv_detail_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="right"
                tools:text="2017-02-28" />

        </LinearLayout>

        <!--plot-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                style="@style/detail_headers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_plot" />

            <TextView
                android:id="@+id/tv_plot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="4"
                tools:text="@string/plot_placeholder" />

        </LinearLayout>

        <ListView
            android:id="@+id/reviews_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ListView>


    </LinearLayout>
</ScrollView>

